# Doc-GenAI-System

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release-workflow.yaml
Iac/: README.md
Iac/ansible/: inventory
Iac/ansible/playbook_with_docker/: create_compute_instance.yaml  install_and_run_docker.yml
Iac/ansible/simple_playbook/: simple_playbook.yml
Iac/terraform/: main.tf  terraform.tfstate
ansible/playbook_with_docker/: create_compute_instance.yaml
ansible/secrets/: decent-mariner-412114-af97d2332019.json  vital-orb-466100-c5-3cc82528e5df.json
ansible/simple_playbook/: simple_playbook.yml
argo-apps/: values.yaml
argo-apps/templates/: cloud.yaml  loop.yaml
argo-apps/values/: fraud-detection.yaml
argo-apps/values/cloud/: ingressroute.yaml
argo-cd/: application.yaml
argo-cd/dev/: deployment.yaml
argocd/app-of-apps/: root-app.yaml
argocd/applications/: ocr-app.yaml
helm-charts/fraud-detection/: Chart.yaml  values.yaml
helm-charts/ocr-app/templates/: deployment.yaml
notebooks-and-apps/myHpp/: Chart.yaml
notebooks-and-apps/myHpp/templates/: gateway.yaml
ocr-app/: values.yaml
ocr-app/templates/: deployment.yaml  virtualservices.yaml
terraform/: terraform.tfstate.backup  terraform.tfvars
tests/: test_main.py
