[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-genai-system"
version = "1.0.7"
description = "Document Generation AI System. In build system phase!, add more"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "fastapi==0.96.0",
    "uvicorn[standard]==0.22.0",
    "loguru==0.7.0",
    "joblib==1.1.0",
    "scikit-learn==1.0.2",
    "pandas==1.4.4",
    "lightgbm==3.3.4",
    "pytest==7.1.2",
    "pytest-cov>=4.0.0",
]